# VLN-CE

./: .gitignore  README.md  pyproject.toml  read_depth.py  read_gt_json.py  requirements.txt
habitat_extensions/: sensors.py
habitat_extensions/config/: vlnce_task.yaml  vlnce_task_navid_r2r.yaml
vlnce/: habitat_extensions  vlnce_baselines
vlnce_baselines/: __init__.py  fake_recollect_trainer.py
vlnce_baselines/common/: fake_recollection_dataset.py
vlnce_baselines/config/: default.py
vlnce_baselines/config/r2r_baselines/: fake_recollect.yaml  navid_r2r.yaml
