[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlnce"
version = "0.1.0"
description = "VLNCE multi-package repo"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["habitat_extensions*", "vlnce_baselines*"]
